# luminaprep

./: .gitignore  FRONTEND_PUBLIC_QUIZ_PLAN.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: ---Day1-3.md  .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  luminaprep_dev.db  pyproject.toml  requirements.txt  task-faris.md  task-hasan.md  test_scalar_docs.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_materials_table.py  00b0dac44154_add_soft_delete_fields_and_avatar_url_.py  0fb0ed43336d_add_quiz_sessions_table_and_update_user.py  1f4c2b7d9a01_add_file_size_to_materials.py  42d81dd5a112_merge_heads.py  5188197b8b59_create_all_tables.py  5acc97813619_remove_user_id_from_quiz.py  5e22f1df1ecc_add_hari_4_5_tables_quizzes_questions_.py  6bebf99bda56_create_public_quizzes_table.py  821a3c713241_change_chat_message_content_to_text.py  a1b2c3d4e5f6_add_user_quizzes_table.py  a9cab6e8d50d_add_user_id_to_quiz.py  bf6e3d23f4a1_increase_column_lengths.py  cf7a4b82d9e1_ensure_missing_tables.py  d1a2b3c4d5e6_add_new_columns.py  d60bdfad8623_merge_heads.py  e3f1a2b4c5d6_add_material_id_to_quizzes.py
backend/app/: celery_app.py  database.py  main.py
backend/app/agents/: __init__.py  adaptive_quiz.py  base.py  chatbot.py  chunking.py  embedding_pipeline.py  exceptions.py  feedback_agent.py  ingestions.py  mcq_quiz.py  orchestrator.py  parsers.py  summarization.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  agent.py  api.py  auth.py  materials.py  projects.py  public_quiz.py  quiz.py  quiz_sessions.py  stream.py
backend/app/brain/: check_db.py
backend/app/core/: config.py  oauth.py  security.py
backend/app/crud/: material.py  project.py  public_quiz.py  question.py  quiz.py  quiz_session.py  user.py  user_attempt.py  user_quiz.py
backend/app/db/: database.py
backend/app/models/: __init__.py  agent_metric.py  chat.py  material.py  project.py  public_quiz.py  question.py  quiz.py  quiz_session.py  user.py  user_attempt.py  user_quiz.py
backend/app/schemas/: auth.py  chat.py  material.py  project.py  public_quiz.py  quiz.py
backend/app/tasks/: __init__.py  material_tasks.py  quiz_tasks.py
backend/app/utils/: langfuse_client.py  oa_client.py  sanitize.py
backend/app/vector_db/: client.py  collections.py  embedding.py
backend/scripts/: start.sh  worker.sh
backend/tests/: conftest.py  test_auth.py  test_auth_projects_materials.py  test_background_tasks.py  test_chatbot_trace.py  test_materials.py  test_mvp_happy_path.py  test_observability.py  test_projects.py  test_quiz_sessions.py  test_quizzes.py  test_smoke.py  test_stream.py
backend/tests/agents/: test_chunking.py  test_embedding_pipeline.py  test_feedback_agent.py  test_ingestion.py  test_parsers.py  test_quiz_generation.py  test_summarization_limits.py
fe/: .env-sample  Dockerfile  (+9 more)
(+65 files in other folders)
